MISC COMMUT
