# ap.services.user/src/core/userController.ts
@@ -1,22 +1,24 @@
-import { Request, Response } from "express";
-import { UserUtil } from "./userUtil";
-import { DataRepository } from "../data/dataRepository";
-import { User } from "../model/user";
+import { Request, Response } from 'express';
+import { UserUtil } from './userUtil';
+import { DataRepository } from '../data/dataRepository';
+import { User } from '../model/user';
+import jwt from 'jsonwebtoken';
+import express from 'express';
 
-const express = require("express");
+const checkAuth = require('../core/checkauth');
+
 const router = express.Router();
-
 const dataRepository = new DataRepository();
 const userUtil = new UserUtil(dataRepository);
 
-router.get("/", (req: Request, res: Response): void => {
-  res.send("Successfully started!");
+router.get('/', (req: Request, res: Response): void => {
+  res.send('Successfully started!');
 });
 
-router.post("/addUser", (req: Request, res: Response): void => {
+router.post('/addUser', checkAuth, (req: Request, res: Response): void => {
   if (!req.body.user) {
     res.status(400);
-    res.send("Invalid paramters");
+    res.send('Invalid paramters');
   }
   try {
     let user = req.body.user;
@@ -29,14 +31,14 @@ router.post("/addUser", (req: Request, res: Response): void => {
   }
 });
 
-router.post("/changePassword", (req: Request, res: Response): void => {
+router.post('/changePassword', checkAuth, (req: Request, res: Response): void => {
   if (isNaN(req.body.id as any)) {
     res.status(400);
-    res.send("Invalid paramters");
+    res.send('Invalid paramters');
   }
   if (!req.body.oldPassword?.length || !req.body.newPassword?.length) {
     res.status(400);
-    res.send("Invalid paramters");
+    res.send('Invalid paramters');
   }
   try {
     userUtil.changePassword(
@@ -45,37 +47,37 @@ router.post("/changePassword", (req: Request, res: Response): void => {
       req.body.newPassword
     );
     res.status(200);
-    res.send("Success");
+    res.send('Success');
   } catch (error) {
     res.status(500);
     res.send(error);
   }
 });
 
-router.get("/changeUserState", (req: Request, res: Response): void => {
+router.get('/changeUserState', checkAuth, (req: Request, res: Response): void => {
   if (isNaN(req.query.id as any)) {
     res.status(400);
-    res.send("Invalid paramters");
+    res.send('Invalid paramters');
   }
   try {
     userUtil.changeUserState(req.query.id as any);
     res.status(200);
-    res.send("Success");
+    res.send('Success');
   } catch {
     res.sendStatus(500);
   }
 });
 
-router.get("/getUser", (req: Request, res: Response): void => {
+router.get('/getUser', checkAuth, (req: Request, res: Response): void => {
   if (isNaN(req.query.id as any)) {
     res.status(400);
-    res.send("Invalid paramters");
+    res.send('Invalid paramters');
   }
   try {
     let result: User | null = userUtil.getUser(req.query.id as any);
     if (result === null) {
       res.status(406);
-      res.send("No result found");
+      res.send('No result found');
     } else {
       res.status(200);
       res.send(result);
@@ -84,16 +86,9 @@ router.get("/getUser", (req: Request, res: Response): void => {
     res.status(500);
     res.send(error);
   }
-  let user = userUtil.getUser(req.query.id as any);
-  if (user) {
-    res.status(200);
-    res.send(user);
-  } else {
-    res.sendStatus(404);
-  }
 });
 
-router.get("/getUsers", (req: Request, res: Response): void => {
+router.get('/getUsers', checkAuth, (req: Request, res: Response): void => {
   try {
     let users = userUtil.getUsers();
     if (users?.length) {
@@ -101,7 +96,7 @@ router.get("/getUsers", (req: Request, res: Response): void => {
       res.send(users);
     } else {
       res.status(406);
-      res.send("No result found");
+      res.send('No result found');
     }
   } catch (error) {
     res.status(500);
@@ -109,16 +104,26 @@ router.get("/getUsers", (req: Request, res: Response): void => {
   }
 });
 
-router.get("/login", (req: Request, res: Response): void => {
+router.post('/login', (req: Request, res: Response): void => {
   if (!req.body.userName?.length || !req.body.password?.length) {
     res.status(400);
-    res.send("Invalid paramters");
+    res.send('Invalid paramters');
   }
   try {
     let result = userUtil.login(req.body.userName, req.body.password);
     if (result) {
+      const token = jwt.sign(
+        {
+          muuid: req.body.userName,
+          memail: req.body.userName,
+        },
+        'secret_key',
+        {
+          expiresIn: '2h',
+        }
+      );
       res.status(200);
-      res.send("Success");
+      res.send({message: 'success', token});
     } else {
       res.sendStatus(406);
     }
@@ -128,10 +133,10 @@ router.get("/login", (req: Request, res: Response): void => {
   }
 });
 
-router.post("/updateUser", (req: Request, res: Response): void => {
+router.post('/updateUser', checkAuth, (req: Request, res: Response): void => {
   if (!req.body.user) {
     res.status(400);
-    res.send("Invalid paramters");
+    res.send('Invalid paramters');
   }
   try {
     let user = req.body.user;
